<resources>
    <string name="app_name">Hiking Helper NI</string>
    <string name="title_home">Trails</string>
    <string name="title_log_hikes">Log Hikes</string>
    <string name="title_saved_lists">Saved Trails</string>
    <string name="profile_option">View Profile</string>
    <string name="profile_option_sign_out">Sign Out</string>
    <string name="profile_option_sign_in">Sign In/Sign up</string>
    <string name="action_bar_option_back">Back</string>
    <string name="sign_in_message_view_logs">Please Sign In to Add and View Your Logged Hikes</string>
    <string name="sign_in_message_profile">Please Sign In to View your Profile</string>
    <string name="sign_in_message_saved_trails">Please Login to view a list of saved trails</string>
    <string name="sign_in_message_saved_times">Please Login to view a list of saved hike time recommendations</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">599897484620268</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb599897484620268</string>
    <string name="hike_name_label">Hike Name</string>
    <string name="trail_length_label">Trail Length (km)</string>
    <string name="time_taken_label">Time Taken</string>
    <string name="hours_label">Hours</string>
    <string name="minutes_label">Minutes</string>
    <string name="date_label">Date</string>
    <string name="submit_log_button_text">Submit Log</string>
    <string name="no_logged_hikes">You currently do not have any logged hikes</string>
    <string name="trail_elevation_label">Elevation (m)</string>
    <string name="trail_route_type_label">Route Type</string>
    <string name="trail_details_forecast_label">Weather Forecast</string>
    <string name="trail_details_recommended_hike_date_label">Recommended Hike Date:</string>
    <string name="trail_details_recommended_customized_tooltip">This recommendation uses your previous hikes logged on your account for a more accurate suggestion</string>
    <string name="trail_details_recommended_not_customized_tooltip">This can be more useful by creating an account and logging at least 2 of your previous hikes</string>
    <string name="hometown_label">Please select your nearest town from the list</string>
    <string name="save_button_label">Save</string>
    <string name="total_distance_hiked_label">Total Distance Hiked</string>
    <string name="number_of_hikes_label">Number Of Hikes</string>
    <string name="number_of_hikes_placeholder">noofhikesplaceholder</string>
    <string name="total_distance_placeholder">totaldistanceplaceholder</string>
    <string name="log_hike_option">Log Hike for trail</string>
    <string name="save_trail_option">Save for later</string>
    <string name="title_saved_trails">Saved Trails</string>
    <string name="title_saved_times">Saved Times</string>
    <string name="no_saved_trails_message">You currently do not have any saved trails</string>
    <string name="no_saved_times_label">You currently do not have any saved time recommendations</string>
</resources>