<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.log_hikes.LogHikesFragment">

    <ScrollView
        android:id="@+id/log_hike_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:id="@+id/text_hike_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hike_name_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_hike_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_date_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:minHeight="48dp"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/text_log_hikes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextFields" />

            <CalendarView
                android:id="@+id/date_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/text_time_taken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_taken_label"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hours_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minutes_label"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text_number_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_text_number_minutes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/custom_log_details_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_trail_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/trail_length_label"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edit_text_number_trail_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_trail_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button_submit_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/submit_log_button_text"
                android:textSize="22sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>